--- a/style.css
+++ b/style.css
@@ -149,6 +149,9 @@ input{
 }
 
 .numbers{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 2.5rem;
     width: 40px;
     height: 40px;
