--- a/style.css
+++ b/style.css
@@ -148,6 +148,10 @@ input{
     background-color: rgba(60, 60, 67, 0.3);
 }
 
+a{
+    text-decoration: none;
+}
+
 .numbers{
     display: flex;
     justify-content: center;
