--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ input{
     accent-color: #007AFF;
     width: 16px;
     height: 16px;
+    margin-left: 16px;
 }
 
 .option-container:hover{
@@ -97,6 +98,7 @@ input{
 .label{
     display: flex;
     gap: 16px;
+    align-items: start;
 }
 
 .label-texts{
