--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ footer{
 
 .tertiary-button{
     background-color: #F4F4F4;
+    font-weight: 500;
     border:0px;
     border-radius: 200px;
     padding: 12px 16px;
@@ -159,6 +160,7 @@ a{
     justify-content: center;
     align-items: center;
     font-size: 2.5rem;
+    font-weight: 500;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -179,6 +181,7 @@ a{
     border-radius: 200px;
     padding: 12px 16px;
     font-size: 2rem;
+    font-weight: 500;
     color: #007AFF;
     text-decoration: underline;
 }
@@ -189,6 +192,7 @@ a{
     border-radius: 200px;
     padding: 12px 24px;
     font-size: 2rem;
+    font-weight: 500;
     color: #FFFFFF;
 }
 
