--- a/style.css
+++ b/style.css
@@ -40,11 +40,11 @@ footer{
 
 .tertiary-button{
     background-color: #F4F4F4;
-    font-weight: 500;
     border:0px;
     border-radius: 200px;
     padding: 12px 16px;
     font-size: 2rem;
+    font-weight: 500;
     color: #007AFF;
 }
 
@@ -59,7 +59,7 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
+    gap: 24px;
     border: 0px;
     max-width: 640px;
 }
@@ -154,11 +154,7 @@ input{
 a{
     text-decoration: none;
 }
-
 .numbers{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 2.5rem;
     font-weight: 500;
     width: 40px;
@@ -219,4 +215,65 @@ a{
 
 #bar1{
     background-color:#007AFF;
+}
+.heading1{
+    font-size: 4.5rem;
+    font-weight: 600;
+    margin:0px;
+    letter-spacing: -0.48px;
+}
+.heading-description{
+    font-size: 2rem;
+    line-height: 140%;
+    color: #616161;
+    margin-bottom:24px;
+    margin-top: 0px;
+}
+
+.form-label{
+    display: flex;
+    flex-direction: column;
+    gap:8px;
+}
+
+.set-of-chips{
+    display:flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    padding: 16px 0px;
+}
+
+.chip{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    border: 1px solid #CDCDCD ;
+    border-radius: 200px;
+    padding: 12px 24px;
+    font-size: 2rem;
+    font-weight: 500;
+    background-color: #FFFFFF;
+}
+
+.other-features{
+    display: flex;
+    flex-direction: column;
+    gap:8px;
+    width: 100%;
+}
+
+#others{
+    background-color: #F4F4F4 ;
+    border: 0px;
+    padding: 12px;
+    font-size: 2rem;
+    font-family: Inter, san-serif;
+    border-radius:10px;
+    height: 100%;
+    min-height: 96px;
+    max-height: 124px;
+}
+
+#others:focus {
+    outline:2px solid #0471e6;
 }
