--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 24px;
+    gap: 16px;
     border: 0px;
     max-width: 640px;
 }
@@ -240,7 +240,7 @@ a{
     display:flex;
     flex-wrap: wrap;
     gap: 12px;
-    padding: 16px 0px;
+    padding: 16px 0px 24px 0px;
 }
 
 .chip{
